@@ -1,3 +1,8 @@
+2000-10-19  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Fixed 2 bugs: Crash in Despise after generator, and problem with
+	readying 2-handed weapons on 'restore'.
+
 2000-10-17  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* exult.cc: Look for local 'data' if necessary.
